[metadata]
name = httpnet
version = 0.9.0
author = Erich Seifert
author_email = dev@erichseifert.de
description = http.net Partner API client
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = MIT
license_file = LICENSE.txt
url = https://github.com/eseifert/httpnet
keywords = domain dns administration
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Systems Administration

[options]
python_requires = >=3.6
packages = find:
install_requires =
    python-dateutil>=2.8.0
    requests>=2.22.0
tests_require =
    pytest>=4.6.3

[options.packages.find]
exclude = *.tests
